pay rent logic